--- a/CardsGame/Base.lproj/Main.storyboard
+++ b/CardsGame/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Hl-6c-DQV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SA4-2T-gLN">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Concentration Theme Chooser View Controller-->
+        <!--The Main Menu-->
         <scene sceneID="I4W-Ra-NKD">
             <objects>
                 <viewController id="1Hl-6c-DQV" customClass="ConcentrationThemeChooserViewController" customModule="CardsGame" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jN5-MO-LKO">
-                                <rect key="frame" x="126" y="432" width="162" height="42"/>
+                                <rect key="frame" x="126" y="454" width="162" height="42"/>
                                 <color key="backgroundColor" name="AccentColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -36,21 +36,22 @@
                             <constraint firstItem="jN5-MO-LKO" firstAttribute="centerX" secondItem="EoD-6F-Ejd" secondAttribute="centerX" id="GzP-iN-KtL"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="The Main Menu" id="Rse-He-kns"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P2F-NJ-a4M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1679.7101449275362" y="-25.446428571428569"/>
+            <point key="canvasLocation" x="-769.56521739130437" y="-25.446428571428569"/>
         </scene>
-        <!--Concentration View Controller-->
+        <!--The Cards Game-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ConcentrationViewController" customModule="CardsGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Unh-lt-hXP">
-                                <rect key="frame" x="16" y="20" width="382" height="232"/>
+                                <rect key="frame" x="16" y="108" width="382" height="232"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="WPL-yt-SF2">
                                         <rect key="frame" x="0.0" y="0.0" width="382" height="72"/>
@@ -151,7 +152,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flips: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QOI-KP-7A4">
-                                <rect key="frame" x="146" y="740" width="122.5" height="48"/>
+                                <rect key="frame" x="146" y="794" width="122.5" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -168,7 +169,7 @@
                             <constraint firstItem="QOI-KP-7A4" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Unh-lt-hXP" secondAttribute="bottom" constant="8" symbolic="YES" id="xQe-7i-OYe"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="gfX-YV-tQg"/>
+                    <navigationItem key="navigationItem" title="The Cards Game" id="gfX-YV-tQg"/>
                     <connections>
                         <outlet property="flipCountLabel" destination="QOI-KP-7A4" id="tSH-sV-xN0"/>
                         <outletCollection property="cardButtons" destination="9j6-VW-n4t" collectionClass="NSMutableArray" id="Lp7-Ym-GPX"/>
@@ -184,7 +185,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-842.39999999999998" y="-24.7376311844078"/>
+            <point key="canvasLocation" x="66.666666666666671" y="-24.776785714285712"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="TK2-Pt-ykm">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SA4-2T-gLN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="XsR-m9-0MK">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="1Hl-6c-DQV" kind="relationship" relationship="rootViewController" id="tni-sK-9hd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hzW-CF-aOT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1679.7101449275362" y="-25.446428571428569"/>
         </scene>
     </scenes>
     <resources>
